# oppNSU

./: .gitignore  lin_privkey  mpi.txt  oppServer
lab1/: main  main.c  minBundle.c  minBundleMPi.c  mpi.c  ms.bash  si.c  sim.c  simpleIter.c  simpleIterMPI.c  simv2.c  test  test.c  withoutMPI.c
lab1/src/: simpleIterationMPIv1.c  simpleIterationMPIv2.c  simpleIterationNative.c  test.c
lab2/: mainv1.cpp  mainv2.cpp  ms.bash  native.c  openMPv1.c  openMPv2.c  openMPv2Sd.c  openMPv2Sg.c  openMPv2Ss.c
lab3/: functionDesc.txt  matrixMulMPI.c  ms.bash
lab4/: ms.bash  solveEquation.c
lab5/: CMakeLists.txt  broken_cluster.bash  broken_cluster.c  cluster.bash  cluster.c  color.h  func_desc.txt  main.c  ms.bash  queue.c  queue.h  task  task.c  task.txt  task_queue.h
